[gd_scene load_steps=23 format=3 uid="uid://buog34xefapxi"]

[ext_resource type="Script" path="res://scenes/COPIES/combat_manager_COPY.gd" id="1_gx2ob"]
[ext_resource type="Script" path="res://scenes/COPIES/enemy_COPY.gd" id="2_0pd3g"]
[ext_resource type="Resource" uid="uid://c3yogn8m318q2" path="res://resources/skills/Fire_Bolt.tres" id="3_pysne"]
[ext_resource type="Resource" uid="uid://dooqfwlwxly5w" path="res://resources/skills/Water_Bolt.tres" id="4_a7kqi"]
[ext_resource type="Texture2D" uid="uid://djyorqs13oxgy" path="res://assets/burger.jpg" id="5_jttv2"]
[ext_resource type="PackedScene" uid="uid://5spa5amgsxfm" path="res://scenes/reusables/hp_bar.tscn" id="6_ggynb"]
[ext_resource type="Script" path="res://scenes/COPIES/ally_COPY.gd" id="6_telc2"]
[ext_resource type="PackedScene" uid="uid://sdwnoh61gawa" path="res://scenes/reusables/skill_info.tscn" id="7_b0a8u"]
[ext_resource type="Resource" uid="uid://t5il68wvfb0s" path="res://resources/skills/basic_attack.tres" id="9_8sds3"]
[ext_resource type="Resource" uid="uid://bya4jpai0ygj5" path="res://resources/skills/Rock Shield.tres" id="10_e4dtk"]
[ext_resource type="PackedScene" uid="uid://tlvpop5rp1x6" path="res://scenes/reusables/spell_select_ui.tscn" id="11_whu4w"]
[ext_resource type="Texture2D" uid="uid://gsryiov15e6m" path="res://assets/qiqifallen.png" id="12_rhmng"]
[ext_resource type="Resource" uid="uid://dcf2ccmtpg225" path="res://resources/skills/Fire_Spear.tres" id="13_y75t0"]
[ext_resource type="Texture2D" uid="uid://c3vp6cnsau7i1" path="res://assets/stelletrash.png" id="14_nxa1u"]
[ext_resource type="Resource" uid="uid://60omj8j38mfk" path="res://resources/skills/Lightning_Bolt.tres" id="15_e301o"]
[ext_resource type="Texture2D" uid="uid://defrd4fdejdu1" path="res://assets/miyabii.png" id="16_16qtn"]
[ext_resource type="Texture2D" uid="uid://qlvy3vq13goh" path="res://assets/yatta.png" id="17_ruc7a"]
[ext_resource type="Resource" uid="uid://clidntww233oy" path="res://resources/skills/Bloody_Slash.tres" id="17_vydv1"]
[ext_resource type="Texture2D" uid="uid://b6rhxb71os38w" path="res://assets/hsrbg.png" id="18_niw7q"]
[ext_resource type="Script" path="res://scripts/sound_manager.gd" id="19_60xe4"]
[ext_resource type="AudioStream" uid="uid://c0fyotn8lqfkv" path="res://assets/fire hit.mp3" id="20_0hm71"]

[sub_resource type="LabelSettings" id="LabelSettings_mo5rj"]
font_size = 48

[node name="CombatTest2COPY" type="Node2D"]

[node name="CombatManager" type="Node" parent="." node_paths=PackedStringArray("ally1", "ally2", "ally3", "ally4", "enemy1")]
script = ExtResource("1_gx2ob")
ally1 = NodePath("../Ally1")
ally2 = NodePath("../Ally2")
ally3 = NodePath("../Ally3")
ally4 = NodePath("../Ally4")
enemy1 = NodePath("../BurgerEnemy")

[node name="TurnText" type="Label" parent="CombatManager"]
offset_left = 829.0
offset_top = 25.0
offset_right = 1035.0
offset_bottom = 92.0
text = "Ally Turn"
label_settings = SubResource("LabelSettings_mo5rj")

[node name="BurgerEnemy" type="Node" parent="."]
script = ExtResource("2_0pd3g")
skill1 = ExtResource("3_pysne")
skill2 = ExtResource("4_a7kqi")
health = 200

[node name="Burger" type="Sprite2D" parent="BurgerEnemy"]
position = Vector2(1603, 375)
scale = Vector2(0.202917, 0.175208)
texture = ExtResource("5_jttv2")

[node name="HP Bar" parent="BurgerEnemy" instance=ExtResource("6_ggynb")]
offset_left = 1486.0
offset_top = 557.0
offset_right = -154.0
offset_bottom = -437.0

[node name="DamageNumberOrigin" type="Node2D" parent="BurgerEnemy"]
position = Vector2(1623, 634)

[node name="ShowNextSkill" type="Control" parent="BurgerEnemy"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="BurgerEnemy/ShowNextSkill"]
layout_mode = 0
offset_left = 1393.0
offset_top = 46.0
offset_right = 1470.0
offset_bottom = 69.0
text = "Next Skill:"

[node name="SkillInfo" parent="BurgerEnemy/ShowNextSkill" instance=ExtResource("7_b0a8u")]
layout_mode = 1
offset_left = 1496.0
offset_top = 41.0
offset_right = 1496.0
offset_bottom = 41.0

[node name="Ally1" type="Node" parent="."]
script = ExtResource("6_telc2")
basic_atk = ExtResource("9_8sds3")
skill_1 = ExtResource("3_pysne")
skill_2 = ExtResource("4_a7kqi")
ult = ExtResource("10_e4dtk")
health = 100

[node name="SpellSelectUi" parent="Ally1" instance=ExtResource("11_whu4w")]
offset_left = 51.0
offset_top = 581.0
offset_right = 51.0
offset_bottom = 581.0
scale = Vector2(0.8, 0.8)

[node name="HP Bar" parent="Ally1" instance=ExtResource("6_ggynb")]
offset_left = 58.0
offset_top = 503.0
offset_right = -1571.0
offset_bottom = -493.0

[node name="Qiqifallen" type="Sprite2D" parent="Ally1"]
position = Vector2(167, 347)
scale = Vector2(0.261113, 0.242546)
texture = ExtResource("12_rhmng")

[node name="DamageNumberOrigin" type="Node2D" parent="Ally1"]
position = Vector2(151, 444)

[node name="Ally2" type="Node" parent="."]
script = ExtResource("6_telc2")
basic_atk = ExtResource("9_8sds3")
skill_1 = ExtResource("3_pysne")
skill_2 = ExtResource("4_a7kqi")
ult = ExtResource("13_y75t0")
health = 100

[node name="SpellSelectUi" parent="Ally2" instance=ExtResource("11_whu4w")]
offset_left = 318.0
offset_top = 584.0
offset_right = 318.0
offset_bottom = 584.0
scale = Vector2(0.8, 0.8)

[node name="HP Bar" parent="Ally2" instance=ExtResource("6_ggynb")]
offset_left = 316.0
offset_top = 503.0
offset_right = -1322.0
offset_bottom = -495.0

[node name="Stelletrash" type="Sprite2D" parent="Ally2"]
position = Vector2(425, 361)
scale = Vector2(0.402062, 0.326291)
texture = ExtResource("14_nxa1u")

[node name="DamageNumberOrigin" type="Node2D" parent="Ally2"]
position = Vector2(375, 458)

[node name="Ally3" type="Node" parent="."]
script = ExtResource("6_telc2")
basic_atk = ExtResource("9_8sds3")
skill_1 = ExtResource("3_pysne")
skill_2 = ExtResource("15_e301o")
ult = ExtResource("13_y75t0")
health = 100

[node name="SpellSelectUi" parent="Ally3" instance=ExtResource("11_whu4w")]
offset_left = 584.0
offset_top = 585.0
offset_right = 584.0
offset_bottom = 585.0
scale = Vector2(0.8, 0.8)

[node name="HP Bar" parent="Ally3" instance=ExtResource("6_ggynb")]
offset_left = 581.0
offset_top = 503.0
offset_right = -1057.0
offset_bottom = -502.0

[node name="Miyabii" type="Sprite2D" parent="Ally3"]
position = Vector2(691, 360)
scale = Vector2(0.348301, 0.307655)
texture = ExtResource("16_16qtn")

[node name="DamageNumberOrigin" type="Node2D" parent="Ally3"]
position = Vector2(637, 468)

[node name="Ally4" type="Node" parent="."]
script = ExtResource("6_telc2")
basic_atk = ExtResource("9_8sds3")
skill_1 = ExtResource("17_vydv1")
skill_2 = ExtResource("4_a7kqi")
ult = ExtResource("13_y75t0")
health = 100

[node name="SpellSelectUi" parent="Ally4" instance=ExtResource("11_whu4w")]
offset_left = 847.0
offset_top = 583.0
offset_right = 847.0
offset_bottom = 583.0
scale = Vector2(0.8, 0.8)

[node name="HP Bar" parent="Ally4" instance=ExtResource("6_ggynb")]
offset_left = 853.0
offset_top = 503.0
offset_right = -778.0
offset_bottom = -495.0

[node name="Yatta" type="Sprite2D" parent="Ally4"]
position = Vector2(964, 354)
scale = Vector2(0.354839, 0.341837)
texture = ExtResource("17_ruc7a")

[node name="DamageNumberOrigin" type="Node2D" parent="Ally4"]
position = Vector2(878, 460)

[node name="EndTurn" type="Button" parent="."]
offset_left = 1521.0
offset_top = 685.0
offset_right = 1681.0
offset_bottom = 722.0
text = "End Turn"

[node name="ResetChoices" type="Button" parent="."]
offset_left = 491.0
offset_top = 806.0
offset_right = 640.0
offset_bottom = 841.0
text = "Reset Choices"

[node name="Background" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.411)
z_index = -5
position = Vector2(963, 539.5)
scale = Vector2(1.50312, 1.49861)
texture = ExtResource("18_niw7q")

[node name="SoundManager" type="Node" parent="."]
script = ExtResource("19_60xe4")

[node name="firehit noise" type="AudioStreamPlayer2D" parent="SoundManager"]
stream = ExtResource("20_0hm71")
volume_db = -16.0

[connection signal="new_select" from="Ally1/SpellSelectUi" to="CombatManager" method="_on_spell_select_ui_new_select"]
[connection signal="new_select" from="Ally2/SpellSelectUi" to="CombatManager" method="_on_spell_select_ui_2_new_select"]
[connection signal="new_select" from="Ally3/SpellSelectUi" to="CombatManager" method="_on_spell_select_ui_3_new_select"]
[connection signal="new_select" from="Ally4/SpellSelectUi" to="CombatManager" method="_on_spell_select_ui_4_new_select"]
[connection signal="pressed" from="EndTurn" to="CombatManager" method="_on_end_turn_pressed"]
[connection signal="pressed" from="ResetChoices" to="CombatManager" method="_on_reset_choices_pressed"]
